@@ -1,3 +1,10 @@
+2008-10-08  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totem-plugin-viewer.c (relative_uri_remove_query),
+	(resolve_uri):
+	* browser-plugin/totemPlugin.cpp:
+	* browser-plugin/totemPlugin.h: Backport fixes from #555417
+
 ============ Version 2.24.2
 
 2008-10-07  Bastien Nocera  <hadess@hadess.net>
